# jemallocator

./: Makefile.am  README.md  configure.ac  jemallocator.pc.in
src/jemallocator/: jemallocator.hpp
test/: basic_test.cpp  container_test.cpp  jemallocator_test.cpp  policy_test.cpp
